v0.14
    * FIX : API 0.6 fixes
    * FIX : Nodes fetched by relations are incomplete and not completed by "download more" (fixes #1715)
	* ADD : Initial support for Symbian S60v5
    * ADD : Support for discardable dialogs/messageboxes (fixes #1487)
    * FIX : Do not automerge GPX nodes (fixes #1486)
    * FIX : Proper clipping via Boost's geometry template library
	* FIX : Do not use guarded pointers (too slow) (closes #1674)
	* FIX : Styles tag selection speed optimisation (by Trav)
	* FIX : OSM/GPX import optimisations (by Trav)
    * FIX : <Esc> in Name property inspector causes AV (fixes #1672)
    * CHG : Move vector background from SHP to OSB
    * CHG : Preferences are uploaded to OSM in binary, base-64 encoded, 254 char slice. Allow to bypass the 255 char per preference limitation.
    * CHG : Preferences lists (Bookmarks, WMS servers, ...) are now distributed and saved as XML in ~/.merkaartor. Allow proper merging (fixes #1401)
    * ADD : Allow to choose which Qt style to use via a combobox
    * CHG : Implement the custom styles as plugins
	* FIX : English language warning
	* ADD : Switch to template-based projection handling; remove dependency on libproj
    * FIX : proper handling of the "Don't connect GPX nodes..." disabling.
    * FIX : Fit the style editor in 1024x600 resolution (fixes #1609)
    * FIX : Reflect in dirty dock the fact that multiple objects were changed together (fixes #1507)
    * ADD : Threaded browser-based background image grabbing. (fixes #1312)
    * FIX : Handle redirection for TMS/WMS servers (fixes #1639)
    * FIX : Clear "hover" state when mouse leave the map widget
	* FIX : WMS has now the proper projection
	* ADD : Projections are specified in a "Projections.xml" file
	* ADD : move WMS/TMS configuration out of the preferences dialog to their own tools menu items.
	* ADD : switch to plugin-based image backgrounds
	* ADD : prioritize tile loading starting from center (by Arvin Schnell)
v0.13